--- a/research/config.ipynb
+++ b/research/config.ipynb
@@ -19,12 +19,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from linprog.method.config.configuration import LinearProgrammingConfig"
+    "from linprog_lib.method.config.configuration import LinearProgrammingConfig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "bd005cac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "e26d744d",
    "metadata": {},
    "outputs": [],
@@ -51,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "00c0b19d",
    "metadata": {},
    "outputs": [
